--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.4",
     "react-modal": "^3.14.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "watchman": "^1.0.0",
     "web-vitals": "^1.1.2"
